# DVA_Data_Parser

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCH_REVIEW.md  AUDIT_PROMPT.md  Architecture.md  Architecture_Conformance_Report.md  Audit_Report_2026-07-15.md  Bug_Reproduction.md  Business_Logic_Report_RC2.md  CERTIFICATION_ENGINE.md  CERTIFICATION_SUITE.md  CHANGELOG.md  CHANGELOG_DATA_OPERATIONS.md  CHANGELOG_RC1_Sprint3.md  CHANGELOG_RC1_Sprint4.md  CHANGELOG_RC1_Sprint7.md  CHANGELOG_STABILIZATION.md  CHANGELOG_WORKFLOW_REFACTOR.md  Code_Health_Report.md  DATA_ACCESS_REVIEW.md  DEBUG_SUMMARY.md  Detection_Completeness_Report_RC2.md  Dockerfile  EVIDENCE.md  Engineering Review.md  Implementation_Roadmap.md  MERGE_REPORT.md  PHASE2_MULTILINE.md  PROCESSING_REVIEW.md  PROMPT.md  PROMPT_2.md  Performance_Report.md  PlatformIntegrationReport.md  Production_Readiness_Report.md  RC2_Architecture_Report.md  RC2_BugFix_Report.md  README.md  README_AI.md  (+15 more)
benchmarks/: data_gen.py  report.py  runner.py
dav_tool/: __main__.py  _aggregators.py  _column_utils.py  _normalizer.py  _numeric.py  _observability.py  _parsers.py  _reports.py  config.py  config_builder.py  config_validator.py  detection.py  format_config.py  io.py  options.py  processing_context.py  quantity.py  types.py
dav_tool/calculations/: __init__.py  core.py
dav_tool/certification/: __init__.py  datasets.py  runner.py
dav_tool/datasource/: __init__.py  base.py  local.py  manager.py  ssh.py
dav_tool/operations/: __init__.py  aggregate.py  base.py  export.py  filter.py  orchestration.py  preview.py  registry.py  sample.py  sort.py  statistics.py  workflow_ops.py
dav_tool/ui/: app.py  certification_suite.py  connection_manager.py  existing.py  helpers.py  layout_builder.py  onboarding.py
docs/: ConnectionManager.md  technical_docs.md  user_guide.md
reviews/: BugsFound.md
tests/: conftest.py  test_benchmark_utils.py  test_canonical_layer.py  test_certification_runner.py  test_config_builder.py  test_data_access.py  test_data_loader_service.py  test_datasource.py  test_detection_service.py  test_edge_cases.py  test_format_config.py  test_golden.py  test_operations.py  test_processing_context.py  test_quantity.py  test_relationship.py  test_reports.py  test_validation_service.py
(+119 files in other folders)
