[project]
name = "dav-tool"
version = "2.0.0"
description = "Data Analysis & Validation Tool for Retail/POS data"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "streamlit>=1.28",
    "psutil>=5.9",
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
