[project]
name = "dav-tool"
version = "2.0.0"
description = "Data Analysis & Validation Tool for Retail/POS data"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "streamlit>=1.28",
    "psutil>=5.9",
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.4",
    "playwright>=1.40",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--html=tests/e2e/reports/report.html --self-contained-html --junit-xml=tests/e2e/reports/junit.xml"
markers = [
    "regression: mark test as a regression test",
]

[tool.pytest-playwright]
screenshot = "only-on-failure"
tracing = "retain-on-failure"
